--- a/src/styles/State.css
+++ b/src/styles/State.css
@@ -1,11 +1,13 @@
 .state {
-    height: 100px;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
     font-size: 2rem;
     color: #fff;
     background-color: #333;
     border: 2px solid #000;
     border-radius: 10px;
     box-shadow: 0 0 10px #000;
+    margin: 10px;
 }
 
 .padding {
